maison 04/15 13:55 toggle we

--- a/web-extension/we-ex-toggle/manifest.json
+++ b/web-extension/we-ex-toggle/manifest.json
@@ -12,5 +12,5 @@
 		"browser_style": true
 	},
 	"background": { "scripts": [ "modify.js" ] },
-	"web_accessible_resources": ["perso.css"]
+	"web_accessible_resources": ["perso.css", "page.js"]
 }
