--- a/web-extension/we-exemple/manifest.json
+++ b/web-extension/we-exemple/manifest.json
@@ -6,11 +6,11 @@
 	"permissions": [ "http://*/*", "https://*/*", "activeTab", "tabs" ],
 	"icons": { "128" : "icon-128.png" },
 	// lancer une we sans popup. je peux aussi utiliser browser_action
-	"page_action": {
+	"browser_action": {
 		"default_icon" : "icon-128.png",
-		"default_title": "we-exemple",
-		"browser_style": true
+		"default_popup": "popup.html",
+		"default_title": "we-exemple"
 	},
 	// utiliser du js dans la popup
-	"background": { "scripts": ["popup.js"] },
+	"background": { "scripts": ["popup.js"] }
 }
