--- a/web-extension/we-aooo/manifest.json
+++ b/web-extension/we-aooo/manifest.json
@@ -3,7 +3,7 @@
 	"name": "we-aooo",
 	"description": "nettoyer les pages du site aooo",
 	"version": "1.0",
-	"permissions": [ "https://archiveofourown.org/works/*", "activeTab" ],
+	"permissions": [ "https://archiveofourown.org/*", "activeTab", "tabs" ],
 	"icons": { "128" : "icon-128.png" },
 	// lancer une we sans popup. je peux aussi utiliser browser_action
 	"page_action": {
@@ -11,6 +11,5 @@
 		"default_title": "we-aooo",
 		"browser_style": true
 	},
-	"background": { "scripts": [ "modify.js" ] },
-	"web_accessible_resources": ["perso.css"]
+	"background": { "scripts": [ "toggle.js" ] }
 }
