--- a/we-clean-page-chrome/manifest.json
+++ b/we-clean-page-chrome/manifest.json
@@ -4,8 +4,13 @@
 	"version": "1.0",
 	"description": "nettoyer mes pages web",
 	"icons": { "48": "icon-128.png" },
+	"content_scripts": [{
+		"matches": ["<all_urls>"],
+		"match_origin_as_fallback": true,
+		"js": ["code.js"]
+	}],
 	"background": { "service_worker": "code.js" },
-	"permissions": [ "activeTab", "tabs", "scripting" ],
+	"permissions": [ "activeTab", "tabs", "scripting", "notifications", "http://*/*", "https://*/*", "https://meteofrance.com/*" ],
 	"action": {
 		"default_icon": "icon-128.png",
 		"default_title": "nettoyeur"
