--- a/web-extention firefox demos/wec3-clean-page/manifest.json
+++ b/web-extention firefox demos/wec3-clean-page/manifest.json
@@ -7,9 +7,9 @@
 	"content_scripts": [{
 		"matches": ["<all_urls>"],
 		"match_origin_as_fallback": true,
-		"js": ["code.js"]
+		"js": ["service-worker.js"]
 	}],
 	"permissions": [ "activeTab", "scripting" ],
-	"background": { "service_worker": "code.js" },
+	"background": { "service_worker": "service-worker.js" },
 	"action": {}
 }
