--- a/web-extention firefox demos/wec3-popup/manifest.json
+++ b/web-extention firefox demos/wec3-popup/manifest.json
@@ -4,20 +4,8 @@
 	"version": "1.0",
 	"description": "afficher une popup avec un manifest v3",
 	"icons": { "48": "icon-128.png" },
-	/*
-	"content_scripts": [{
-		"matches": ["<all_urls>"],
-		"match_origin_as_fallback": true,
-		"js": ["service-worker.js"]
-	}],
-	"background": { "service_worker": "service-worker.js" },
-	*/
-	"content_scripts": [{
-		"matches": ["<all_urls>"],
-		"match_origin_as_fallback": true,
-		"js": ["service-worker.js"]
-	}],
-	"permissions": [ "activeTab", "scripting" ],
+	"externally_connectable": { "matches": [ "<all_urls>" ]},
+	"permissions": [ "storage", "tabs", "activeTab", "scripting" ],
 	"action": {
 		"default_icon": { "48": "icon-128.png" },
 		"default_title": "afficher la popup",
